--- a/src/Component/MyWork/MyWork.css
+++ b/src/Component/MyWork/MyWork.css
@@ -15,12 +15,12 @@
         font-weight:600;
 
     }
-    /* .mywork-title img{
+     .mywork-title img{
         position:absolute;
         bottom:0;
         right:0;
         z-index:-1;
-    } */
+    } 
      .mywork-container{
         display:grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -56,7 +56,7 @@
         transition: 0.6s;
         
     }
-    @media(max-width:768px){
+    @media(max-width:600px){
        .mywork{
         gap:50px;
         margin: 50px 70px;
