--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,6 @@ body{
     font-family: 'outfit';
 }
 @media(max-width:768px){
-    border:2px solid black;
+    border:2px solid green;
     box-size:border-box;
 }
